# ask-my-pdf

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/plan/: interactive-chat-drf.md  reupload-pdf.md
chats/: models.py  urls.py  views.py
chats/api/: serializers.py  urls.py  views.py
chats/migrations/: 0001_initial.py  0002_add_content_hash_to_documentchunk.py
chats/services/: ingestor.py  prompts.py  rag.py
chats/services/rag/: config.py  embedder.py  generate_response.py  ingestor.py  parser.py  pipeline.py  prompts.py  query_rewriter.py  reranker.py  types.py
chats/templates/chats/: base.html  chat.html  list.html  upload.html
chats/templatetags/: chat_extras.py
config/: settings.py  urls.py
documents/services/: embedder.py  parser.py  types.py
