[project]
name = "ask-my-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-environ>=0.14.0",
    "langchain-openai>=1.3.3",
    "langchain-postgres>=0.0.17",
    "pgvector>=0.3.6",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pypdf>=6.14.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.19",
]
